--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body.disconnected {
 }
 
 #answer-container.master {
-  width: 100%
+  width: 100%;
 }
 
 div.answer {
@@ -147,4 +147,51 @@ div.answer div.slider {
 
 #correct-answer.button.show {
   display: inline-block;
+}
+
+#overlay {
+  position: absolute;
+  top: 30px;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+  color: #fff;
+}
+
+#startBtn {
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  background-color: #222;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+#startBtn:hover {
+  background-color: #555;
+}
+
+#scoreDisplayFixed {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 10px 20px;
+  border-radius: 12px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #00ffcc;
+  z-index: 10;
+  border: 2px solid #00ffcc;
+  font-family: sans-serif;
+}
+
+a-scene {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
 }
